[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "click>=8.3.1",
    "lit-python-sdk>=1.2.3",
    "pyinstaller>=6.19.0",
    "pynacl>=1.6.2",
    "pyopencl>=2026.1.2",
    "pyside6>=6.10.2",
    "rich>=14.3.3",
    "solana>=0.36.11",
    "solders>=0.27.1",
]
