[package]
name = "blind_vanity"
version = "0.1.0"
description = "Blind vanity address grinder with on-chain encrypted packages"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blind_vanity"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
